src/styles/main.css
.debug1 {
  border: 1px dashed red;
}

.debug2 {
  border: 1px dashed gold;
}

@media screen and (max-width: 568px) {
  .small  { display: inline; }
  .medium { display: none;   }
  .large  { display: none;   }
}

@media screen and (min-width: 568px) and (max-width: 768px) {
  .small  { display: inline; }
  .medium { display: none;   }
  .large  { display: none;   }
}

@media screen and (min-width: 768px) and (max-width: 1024px) {
  .small  { display: none;   }
  .medium { display: inline; }
  .large  { display: none;   }
}

@media screen and (min-width: 1024px) {
  .small  { display: none;   }
  .medium { display: none;   }
  .large  { display: inline; }
}

.nav1 {
  box-sizing: border-box;
  position: absolute;
  left: 0;
  bottom: 0;
  height: 2em;
  padding-left: 4vw;
  padding-right: 0;
  font-size: 2.5em;
  font-weight: lighter;
  text-align: center;
  cursor: pointer;
}

.nav2 {
  box-sizing: border-box;
  position: absolute;
  right: 0;
  bottom: 0;
  height: 2em;
  padding-left: 2vw;
  padding-right: 4vw;
  font-size: 2.5em;
  font-weight: lighter;
  text-align: right;
}

.intro {
  z-index: -1;
  animation: background 30s cubic-bezier(0.25,0.1,0.25,1) infinite;
  background-size: cover;
  position: absolute;
  display: flex;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
}

@keyframes background {
  0% { background-color: #f99; }
  33% { background-color: #9f9; }
  67% { background-color: #99f; }
  100% { background-color: #f99; }
}

.welcome h2 {
    font-size: 1.5em;
    font-weight: lighter;
}

.welcome {
  margin: auto;
  font-family: 'Gill Sans', sans serif;
  font-weight: lighter;
  font-size: 1.5em;
  font-weight: lighter;
  text-align: center;
  padding-left: 20%;
  padding-right: 20%;
}

.project {
  padding-top: 2vw;
  padding-left: 4vw;
  padding-right: 4vw;
  padding-bottom: 2vw;
}

.project-images img {
  display: block;
  width: auto;
  height: auto;
  max-width: 100%;
  max-height: 75vh;
}

.project-images figure {
  display: table;
  margin: auto;
  font-family: 'Gill Sans', sans serif;
  font-size: 1em;
  font-weight: lighter;
}

.project-image figcaption {
  text-align: right;
}

.project-header {
  margin-top: 0;
  border-bottom: 4px solid black;
  font-family: 'Gill Sans', sans serif;
  font-size: 2em;
  font-weight: lighter;
  text-align: left;
  margin-right: 2vw;
}

.project-text {
  font-family: 'Gill Sans', sans serif;
  font-size: 1.2em;
  font-weight: lighter;
  text-align: center;
  margin: auto;
  padding: 2em;
  max-width: 66%;
}

.project-text a {
  font-style: italic;
}

.about {
  padding-top: 2vw;
  padding-left: 4vw;
  padding-right: 4vw;
  padding-bottom: 2vw;
}

.about-portrait > img {
  display: block;
  width: auto;
  height: auto;
  max-width: 100%;
  max-height: 80vh;
}

.about-header {
  border-bottom: 4px solid black;
  font-family: 'Gill Sans', sans serif;
  font-size: 2em;
  font-weight: lighter;
  text-align: left;
  margin-right: 2vw;
}

.about-cv {
  font-family: 'Gill Sans', sans serif;
  font-size: 1em;
  font-weight: lighter;
  text-align: justify;
  margin: auto;
  vertical-align: middle;
  margin-right: 2vw;
}

.max-height {
  height: 100%;
}

.frame {
  position: relative;
  padding: 2em;
}

.frame-image {
  width: 100%;
}

.frame-underlay {
  position: absolute;
  display: flex;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  background-color:rgba(255, 255, 255, 0.7);
}

.frame-text {
  margin: auto;
  font-family: 'Gill Sans', sans serif;
  font-weight: lighter;
  font-size: 1.5em;
  font-weight: lighter;
}

/* on hover over project picture -> show project description */

.frame > .frame-image {
  display: block;
}

.frame > .frame-underlay {
  display: none;
}

.frame:hover > .frame-underlay {
  display: flex;
}

.me {
  margin: auto;
  margin-top: 1em;
  margin-bottom: 1em;
  font-family: 'Gill Sans', sans serif;
  font-size: 1.5em;
  font-weight: lighter;
  text-align: center;
  text-transform: uppercase;
  border: 2px solid black;
  padding: 0.8em;
}

.you {
  margin: auto;
  font-family: 'Gill Sans', sans serif;
  font-weight: lighter;
  text-align: center;
  text-transform: lowercase;
}

.you a:hover {
  border-bottom: 3px solid black;
}

a {
  color: black;
  line-height: 1.5;
  text-decoration: none;
}

a:hover {
  border-bottom: 4px solid black;
}

body, html {
  height: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  overflow: auto;
}

body::-webkit-scrollbar {
  display: none;
}

.gallery {
  padding-top: 2vw;
  padding-left: 4vw;
  padding-right: 4vw;
  padding-bottom: 2vw;
}

.noselect {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.social {
  font-family: 'Gill Sans', sans serif;
  font-weight: lighter;
  text-align: right;
  padding-left: 2vw;
  padding-right: 2vw;
}

.social a:hover {
  border-bottom: 3px solid black;
}

